<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_view_registration"
            android:textSize="40sp"
            android:textColor="@color/design_default_color_primary"


            />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="no"
            android:layout_marginTop="8dp"
            android:maxWidth="488dp"
            android:inputType="textEmailAddress"
            android:hint="@string/edit_text_email"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="no"
            android:layout_marginTop="4dp"
            android:maxWidth="488dp"
            android:inputType="textPassword"
            android:hint="@string/edit_text_password"
            />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="no"
            android:layout_marginTop="4dp"
            android:maxWidth="488dp"
            android:inputType="textPersonName"
            android:hint="@string/edit_text_name"
            />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="no"
            android:layout_marginTop="4dp"
            android:maxWidth="488dp"
            android:inputType="textPersonName"
            android:hint="@string/edit_text_last_name"
            />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="no"
            android:layout_marginTop="4dp"
            android:maxWidth="488dp"
            android:inputType="numberPassword"
            android:hint="@string/edit_text_age"
            />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_sign_up"
            />

    </LinearLayout>
</ScrollView>